##-*- Mode: Change-Log; coding: utf-8; -*-
##
## Change log for perl distribution DiaColloDB

pending Mon, 29 Feb 2016 09:29:20 +0100 moocow
	* remove temporary PDL headers created by DiaColloDB::PackedFile::toPdl(), used by TDF::union()

v0.08.003 Fri, 26 Feb 2016 15:14:43 +0100 moocow
	* added missing PODs to MANIFEST
	* added more DiaColloDB::Document subclasses:
	  - DiaColloDB::Document::JSON - raw JSON dump
	  - DiaColloDB::Document::TCF - CLARIN-D TCF (attributes {w,p,l} only; metadata from abused <source> element)
	  - DiaColloDB::Document::TEI - basic TEI-like XML (flexible but slow)

v0.08.002 Tue, 23 Feb 2016 10:51:02 +0100 moocow
	* added Document::DDCTabs options trimGenre, trimAuthor
	* added explicit PDL dependency in CONFIGURE_REQUIRES + PREREQ_PM: try to be cpantesters-friendly (see RT bug #112321)
	* added manual check for PDL in Makefile.PL: disable PDL-Utils/ subdir build if PDL isn't installed

v0.08.001 Fri, 29 Jan 2016 12:35:44 +0100 moocow
	* added co-occurrence profiles over (term x document) frequency matrix via DiaColloDB::Relation::TDF
	  - requires PDL, PDL::CCS, etc.: should be safe to omit, only loaded on demand
	* re-worked compile-time filtering; new options to dcdb-create.perl:
            -tfmin TFMIN : minimum global term frequency, regardless of DATE component (default=5)
            -lfmin LFMIN : minimum global lemma frequency (default=5)
	  - prunes enums too, which keeps them smaller and speeds up access

v0.07.015 Wed, 04 Nov 2015 14:18:20 +0100 moocow
	* added mi3 profiles a la Rychlý (2008)
	* report log-log-likelihood scores (extra log() for better scaling)
	* singularity checking for log-likelihood computations

v0.07.014 Tue, 03 Nov 2015 11:42:26 +0100 moocow
	* added 1-sided log-likelihood ratio profiles a la Evert (2008)

v0.07.013 2015-11-02 12:52:56 +0100 moocow
	* fix for Profile::empty(): a profile is empty if it contains no collocates, even if it has nonzero f1

v0.07.012 Wed, 28 Oct 2015 13:04:20 +0100 moocow