@@ -4,6 +4,7 @@
 
 pending Mon, 29 Feb 2016 09:29:20 +0100 moocow
 	* remove temporary PDL headers created by DiaColloDB::PackedFile::toPdl(), used by TDF::union()
+	* fixed buggy Profile::trim() call on undefined (empty) profiles in Profile::Diff::pretrim()
 
 v0.08.003 Fri, 26 Feb 2016 15:14:43 +0100 moocow
 	* added missing PODs to MANIFEST
